css/_theme.scss
$accent-color: #F2CB52;
$text-color-on-accent: white;

.sidebar {
	background-color: $accent-color;
	color: $text-color-on-accent;
	font-size: (16px/20px) * 1rem;
	.new {
		font-weight: bold;
	}
}
.content a,
.related-posts li a:hover {
  color: darken($accent-color, 18%);
}

.fainted {
	a { color: $accent-color }
	a:hover { color: darken($accent-color, 18%) }
}

.sidebar-about {
	.pre-title {
		//@extend .small;
		margin: 0;
	}
	h1 {
		margin: -0.35em 0 0.5rem 0.5rem;
	}
	.tagline {
		@extend .small;
		margin: 0 0 1rem 0;
	}
}

.sidebar .faded {
	&, a:link, a:visited {
		color: darken($accent-color, 28%);
	}
	a:hover, a:active {
		color: $text-color-on-accent;
	}
}

.android, .ios {
	.non-clickable-phone-number {
		display: none;
	}
	.clickable-phone-number {
		display: inline !important;
	}
}

